kubernetes/tenants/drova/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drova
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
