kubernetes/tenants/drova/l7-authz.yaml
#
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: trip-service-authz
  namespace: drova
  annotations: { istio.io/dry-run: "false" }
spec:
  targetRefs: [{ group: "", kind: Service, name: trip-service }]
  action: ALLOW
  rules:
    - from: [{ source: { principals: ["cluster.local/ns/drova/sa/api-gateway"] } }]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: driver-service-authz
  namespace: drova
  annotations: { istio.io/dry-run: "false" }
spec:
  targetRefs: [{ group: "", kind: Service, name: driver-service }]
  action: ALLOW
  rules:
    - from: [{ source: { principals: ["cluster.local/ns/drova/sa/api-gateway"] } }]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: user-service-authz
  namespace: drova
  annotations: { istio.io/dry-run: "false" }
spec:
  targetRefs: [{ group: "", kind: Service, name: user-service }]
  action: ALLOW
  rules:
    - from: [{ source: { principals: ["cluster.local/ns/drova/sa/api-gateway", "cluster.local/ns/drova/sa/trip-service"] } }]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: payment-service-authz
  namespace: drova
  annotations: { istio.io/dry-run: "false" }
spec:
  targetRefs: [{ group: "", kind: Service, name: payment-service }]
  action: ALLOW
  rules: []
